# Codex-Resume-Loop

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REPO_MAP.md  build.rs  logo.html
.agents/skills/code-dev-standards/: SKILL.md
.agents/skills/code-dev-standards/agents/: openai.yaml
.agents/skills/code-dev-standards/references/: coding_rules.md  data_structures_algorithms.md  engineering_templates_python_go_rust.md  language_notes_python_go_rust.md  problem_type_mapping_python_go_rust.md
.agents/skills/gemini-frontend-review-gate/: SKILL.md
.agents/skills/gemini-frontend-review-gate/agents/: openai.yaml
.agents/skills/gemini-frontend-review-gate/references/: gemini-handoff-examples.md
packaging/ios/: README.md  build-ui-and-cli.sh
packaging/linux/: build-cli.ps1  install.sh
packaging/windows/: build-installer.ps1  crl.iss  install.ps1  sync-icon.py  test-install-migration.ps1  test-uninstall-e2e.ps1
releases/0.1.0/: RELEASE.md
src/: codex.rs  desktop.rs  diagnostics.rs  lib.rs  main.rs  model.rs  persistence.rs  runtime.rs
ui/: main.slint
